<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_product_order_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/product_name"
        android:textColor="@color/colorTextHint"
        android:textSize="18sp" />

    <TextView
        android:drawableEnd="@drawable/ic_success"
        android:id="@+id/tv_order_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        android:text="@string/order_code" />


    <TextView
        android:textSize="16sp"
        android:id="@+id/tv_day_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/order_date" />


    <TextView
        android:id="@+id/tv_status_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/status" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C9C7C7" />
</LinearLayout>