<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_product_cmt"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/cancel" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/tv_cmt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_comment"
            android:textColor="@color/colorTextHint"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_time_cmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_commnent"
            android:textColor="@color/colorGrayStar"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/tv_star_number"
            android:layout_width="100dp"
            android:layout_height="24dp"
            android:src="@drawable/zero_point_five_stars" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/have_purchase"
            android:textColor="@color/colorGreen" />

        <TextView
            android:id="@+id/tv_name_acc_cmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrayStar"
            android:textSize="14sp"
            android:text="@string/name_sign_up" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_content_cmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pulll_up_to_load_more"
        android:textColor="@color/colorTextHint"
        android:textSize="16sp" />

</LinearLayout>