<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:id="@+id/ll_product"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_product"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorLigtGray"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tv_name_product"
        android:layout_width="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/name_sign_up"
        android:textColor="@color/colorTextHint"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_price_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_290_000"
            android:textColor="@color/colorRedError"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sale_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/sale_percent"
            android:textColor="@color/colorTextHint"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>