<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_product_like"
    android:layout_width="match_parent"
    android:layout_marginBottom="16dp"
    android:layout_height="wrap_content"
    android:background="@color/colorWhiteBG">

    <ImageView
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/iv_pr_like"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@color/colorWhiteBG"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_name_product_like"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:maxLines="1"
        android:text="@string/tv_name"
        android:textColor="@color/colorTextHint"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/iv_pr_like"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_price_product_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/_1_290_000"
        android:textColor="@color/colorTextHint"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_pr_like"
        app:layout_constraintTop_toBottomOf="@id/tv_name_product_like" />

    <TextView
        android:id="@+id/tv_sale_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:text="@string/_1_290_000"
        android:textColor="@color/colorTextHint"
        app:layout_constraintBottom_toBottomOf="@id/tv_price_product_sale"
        app:layout_constraintStart_toEndOf="@id/tv_price_product_sale"
        app:layout_constraintTop_toTopOf="@id/tv_price_product_sale" />

    <ImageView
        android:id="@+id/iv_star_of_product"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:src="@drawable/five_stars"
        app:layout_constraintStart_toStartOf="@id/tv_price_product_sale"
        app:layout_constraintTop_toBottomOf="@id/tv_price_product_sale" />

    <TextView
        android:id="@+id/tv_cmt_count_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:text="@string/cmt_count"
        android:textColor="@color/colorGrayStar"
        app:layout_constraintBottom_toBottomOf="@id/iv_star_of_product"
        app:layout_constraintStart_toEndOf="@id/iv_star_of_product"
        app:layout_constraintTop_toTopOf="@id/iv_star_of_product" />

    <TextView
        android:id="@+id/tv_like_out_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:text="@string/out_of_product"
        android:textColor="@color/colorRedError"
        app:layout_constraintEnd_toEndOf="@id/iv_star_of_product"
        app:layout_constraintStart_toStartOf="@id/iv_star_of_product"
        app:layout_constraintTop_toBottomOf="@id/iv_star_of_product" />

    <TextView
        android:background="@color/colorGrayBg"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>